--- a/app/src/main/res/layout/activity_barcode.xml
+++ b/app/src/main/res/layout/activity_barcode.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.genar.scanner_martur.martur_scanner.barcode"
+    tools:context="com.genar.hktportal.activity.BarcodeActivity"
     android:padding="16dp"
     android:orientation="vertical"
     android:weightSum="1">
