--- a/app/src/main/res/layout/activity_my_sql.xml
+++ b/app/src/main/res/layout/activity_my_sql.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.genar.scanner_martur.martur_scanner.MySqlActivity">
+    tools:context="com.genar.hktportal.activity.MySqlActivity">
 
     <Button
         android:id="@+id/sorgu_gonder"
@@ -15,5 +15,8 @@
         android:text="Sorgula"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="188dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 </android.support.constraint.ConstraintLayout>
