--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,20 +35,23 @@
         android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/login_etsicilno" />
 
-    <Button
+    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
         android:id="@+id/login_btngiris"
-        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/button_background"
         android:text="@string/login_btngiris"
         app:layout_constraintBottom_toTopOf="@+id/login_guide75h"
         app:layout_constraintLeft_toLeftOf="@+id/login_etsifre"
         app:layout_constraintRight_toRightOf="@+id/login_etsifre"
-        app:layout_constraintTop_toBottomOf="@+id/login_etsifre" />
+        app:layout_constraintTop_toBottomOf="@+id/login_etsifre"
+        app:spinning_bar_color="#FFF"
+        app:spinning_bar_padding="6dp"
+        app:spinning_bar_width="4dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
