Knn Ekleme gorev null

--- a/app/src/main/res/layout/activity_addknn.xml
+++ b/app/src/main/res/layout/activity_addknn.xml
@@ -116,8 +116,8 @@
         android:layout_marginTop="32dp" />
 
     <EditText
-        android:hint="Açıklma ekle"
         android:id="@+id/addknn_etaciklama"
+        android:hint="Açıklama ekle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
