--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,33 +4,20 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/menu_knnekle"
-
-            android:title="Knn Ekle" />
-        <item
-            android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Knn Ekle" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Butonlar">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_btn1"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="Button 1" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_btn2"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Button 2" />
         </menu>
     </item>
-
 </menu>
