--- a/app/src/main/res/layout/fragment_main_tab.xml
+++ b/app/src/main/res/layout/fragment_main_tab.xml
@@ -6,17 +6,17 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="4dp"
     tools:context="com.genar.hktportal.activity.MainTabActivity$PlaceholderFragment">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/hatalist_recyclerview"
+        android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95"
+        app:layout_constraintTop_toBottomOf="@+id/btnyenile"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1">
 
@@ -51,17 +51,28 @@
         android:id="@+id/hatalist_recyclerview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
         android:padding="8dp"
         android:scrollbars="vertical"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginTop="48dp"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintTop_toTopOf="parent">
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1">
 
     </android.support.v7.widget.RecyclerView>
+
+    <Button
+        android:id="@+id/btnyenile"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:text="Listeyi Yenile"
+        android:textSize="10sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="0dp" />
 
 </android.support.constraint.ConstraintLayout>
