--- a/app/src/main/res/layout/item_hatalist.xml
+++ b/app/src/main/res/layout/item_hatalist.xml
@@ -8,12 +8,14 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/c1"
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1">
 
