--- a/app/src/main/res/layout/activity_addknn.xml
+++ b/app/src/main/res/layout/activity_addknn.xml
@@ -98,11 +98,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/addknn_spinnerbolumP"
-        android:layout_marginRight="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/addknn_spinnerbolumP"
         app:layout_constraintRight_toRightOf="@+id/addknn_spinnerbolumP"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/addknn_spinnerbolumP" />
+        app:layout_constraintTop_toBottomOf="@+id/addknn_spinnerbolumP" />
 
     <TextView
         android:id="@+id/textView"
@@ -113,7 +111,8 @@
         android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="32dp" />
+        android:layout_marginTop="32dp"
+        android:layout_marginStart="16dp" />
 
     <EditText
         android:id="@+id/addknn_etaciklama"
@@ -122,7 +121,6 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="32dp"
         android:ems="10"
         android:minLines="1"
         android:maxLines="3"
@@ -131,8 +129,31 @@
         android:inputType="textMultiLine"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/addknn_spinneroperation" />
+
+    <Spinner
+        android:id="@+id/addknn_spinneroperation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/textView8"
+        app:layout_constraintRight_toRightOf="@+id/addknn_spinnerbolumS"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Operator"
         app:layout_constraintTop_toBottomOf="@+id/addknn_etmakine"
-        app:layout_constraintHorizontal_bias="0.0" />
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/addknn_etmakine" />
 
 
 </android.support.constraint.ConstraintLayout>
